editor/src/renderer/lib/parser-src/parser.js
// @generated by Peggy 4.2.0.
//
// https://peggyjs.org/

"use strict";


function peg$subclass(child, parent) {
  function C() { this.constructor = child; }
  C.prototype = parent.prototype;
  child.prototype = new C();
}

function peg$SyntaxError(message, expected, found, location) {
  var self = Error.call(this, message);
  // istanbul ignore next Check is a necessary evil to support older environments
  if (Object.setPrototypeOf) {
    Object.setPrototypeOf(self, peg$SyntaxError.prototype);
  }
  self.expected = expected;
  self.found = found;
  self.location = location;
  self.name = "SyntaxError";
  return self;
}

peg$subclass(peg$SyntaxError, Error);

function peg$padEnd(str, targetLength, padString) {
  padString = padString || " ";
  if (str.length > targetLength) { return str; }
  targetLength -= str.length;
  padString += padString.repeat(targetLength);
  return str + padString.slice(0, targetLength);
}

peg$SyntaxError.prototype.format = function(sources) {
  var str = "Error: " + this.message;
  if (this.location) {
    var src = null;
    var k;
    for (k = 0; k < sources.length; k++) {
      if (sources[k].source === this.location.source) {
        src = sources[k].text.split(/\r\n|\n|\r/g);
        break;
      }
    }
    var s = this.location.start;
    var offset_s = (this.location.source && (typeof this.location.source.offset === "function"))
      ? this.location.source.offset(s)
      : s;
    var loc = this.location.source + ":" + offset_s.line + ":" + offset_s.column;
    if (src) {
      var e = this.location.end;
      var filler = peg$padEnd("", offset_s.line.toString().length, ' ');
      var line = src[s.line - 1];
      var last = s.line === e.line ? e.column : line.length + 1;
      var hatLen = (last - s.column) || 1;
      str += "\n --> " + loc + "\n"
          + filler + " |\n"
          + offset_s.line + " | " + line + "\n"
          + filler + " | " + peg$padEnd("", s.column - 1, ' ')
          + peg$padEnd("", hatLen, "^");
    } else {
      str += "\n at " + loc;
    }
  }
  return str;
};

peg$SyntaxError.buildMessage = function(expected, found) {
  var DESCRIBE_EXPECTATION_FNS = {
    literal: function(expectation) {
      return "\"" + literalEscape(expectation.text) + "\"";
    },

    class: function(expectation) {
      var escapedParts = expectation.parts.map(function(part) {
        return Array.isArray(part)
          ? classEscape(part[0]) + "-" + classEscape(part[1])
          : classEscape(part);
      });

      return "[" + (expectation.inverted ? "^" : "") + escapedParts.join("") + "]";
    },

    any: function() {
      return "any character";
    },

    end: function() {
      return "end of input";
    },

    other: function(expectation) {
      return expectation.description;
    }
  };

  function hex(ch) {
    return ch.charCodeAt(0).toString(16).toUpperCase();
  }

  function literalEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/"/g,  "\\\"")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function classEscape(s) {
    return s
      .replace(/\\/g, "\\\\")
      .replace(/\]/g, "\\]")
      .replace(/\^/g, "\\^")
      .replace(/-/g,  "\\-")
      .replace(/\0/g, "\\0")
      .replace(/\t/g, "\\t")
      .replace(/\n/g, "\\n")
      .replace(/\r/g, "\\r")
      .replace(/[\x00-\x0F]/g,          function(ch) { return "\\x0" + hex(ch); })
      .replace(/[\x10-\x1F\x7F-\x9F]/g, function(ch) { return "\\x"  + hex(ch); });
  }

  function describeExpectation(expectation) {
    return DESCRIBE_EXPECTATION_FNS[expectation.type](expectation);
  }

  function describeExpected(expected) {
    var descriptions = expected.map(describeExpectation);
    var i, j;

    descriptions.sort();

    if (descriptions.length > 0) {
      for (i = 1, j = 1; i < descriptions.length; i++) {
        if (descriptions[i - 1] !== descriptions[i]) {
          descriptions[j] = descriptions[i];
          j++;
        }
      }
      descriptions.length = j;
    }

    switch (descriptions.length) {
      case 1:
        return descriptions[0];

      case 2:
        return descriptions[0] + " or " + descriptions[1];

      default:
        return descriptions.slice(0, -1).join(", ")
          + ", or "
          + descriptions[descriptions.length - 1];
    }
  }

  function describeFound(found) {
    return found ? "\"" + literalEscape(found) + "\"" : "end of input";
  }

  return "Expected " + describeExpected(expected) + " but " + describeFound(found) + " found.";
};

function peg$parse(input, options) {
  options = options !== undefined ? options : {};

  var peg$FAILED = {};
  var peg$source = options.grammarSource;

  var peg$startRuleFunctions = { Document: peg$parseDocument };
  var peg$startRuleFunction = peg$parseDocument;

  var peg$c0 = "!";
  var peg$c1 = "=";
  var peg$c2 = "[";
  var peg$c3 = "]";
  var peg$c4 = "(";
  var peg$c5 = ")";
  var peg$c6 = "((";
  var peg$c7 = "))";
  var peg$c8 = "[?";
  var peg$c9 = "<";
  var peg$c10 = ">";
  var peg$c11 = "--";
  var peg$c12 = "@(";
  var peg$c13 = ",";
  var peg$c14 = ")->(+";
  var peg$c15 = "+";
  var peg$c16 = ")->(";
  var peg$c17 = "##";
  var peg$c18 = "#";
  var peg$c19 = "-";
  var peg$c20 = "\"\"\"";
  var peg$c21 = "\"";
  var peg$c22 = "\\\"";
  var peg$c23 = "\\n";
  var peg$c24 = "\\\\";
  var peg$c25 = "\n";
  var peg$c26 = ".";
  var peg$c27 = "//";

  var peg$r0 = /^[\t-\n\r ]/;
  var peg$r1 = /^[B-CLRT]/;
  var peg$r2 = /^[a-zA-Z]/;
  var peg$r3 = /^[a-zA-Z0-9_\-]/;
  var peg$r4 = /^[^ \t\n\r\f\v=]/;
  var peg$r5 = /^[0-9]/;
  var peg$r6 = /^[^>]/;
  var peg$r7 = /^[^\n]/;
  var peg$r8 = /^[ \t]/;
  var peg$r9 = /^[\n\r]/;

  var peg$e0 = peg$classExpectation([["\t", "\n"], "\r", " "], false, false);
  var peg$e1 = peg$literalExpectation("!", false);
  var peg$e2 = peg$literalExpectation("=", false);
  var peg$e3 = peg$literalExpectation("[", false);
  var peg$e4 = peg$literalExpectation("]", false);
  var peg$e5 = peg$literalExpectation("(", false);
  var peg$e6 = peg$literalExpectation(")", false);
  var peg$e7 = peg$literalExpectation("((", false);
  var peg$e8 = peg$literalExpectation("))", false);
  var peg$e9 = peg$literalExpectation("[?", false);
  var peg$e10 = peg$literalExpectation("<", false);
  var peg$e11 = peg$literalExpectation(">", false);
  var peg$e12 = peg$literalExpectation("--", false);
  var peg$e13 = peg$literalExpectation("@(", false);
  var peg$e14 = peg$literalExpectation(",", false);
  var peg$e15 = peg$literalExpectation(")->(+", false);
  var peg$e16 = peg$literalExpectation("+", false);
  var peg$e17 = peg$literalExpectation(")->(", false);
  var peg$e18 = peg$literalExpectation("##", false);
  var peg$e19 = peg$literalExpectation("#", false);
  var peg$e20 = peg$literalExpectation("-", false);
  var peg$e21 = peg$classExpectation([["B", "C"], "L", "R", "T"], false, false);
  var peg$e22 = peg$classExpectation([["a", "z"], ["A", "Z"]], false, false);
  var peg$e23 = peg$classExpectation([["a", "z"], ["A", "Z"], ["0", "9"], "_", "-"], false, false);
  var peg$e24 = peg$literalExpectation("\"\"\"", false);
  var peg$e25 = peg$literalExpectation("\"", false);
  var peg$e26 = peg$literalExpectation("\\\"", false);
  var peg$e27 = peg$literalExpectation("\\n", false);
  var peg$e28 = peg$literalExpectation("\\\\", false);
  var peg$e29 = peg$literalExpectation("\n", false);
  var peg$e30 = peg$anyExpectation();
  var peg$e31 = peg$classExpectation([" ", "\t", "\n", "\r", "\f", "\v", "="], true, false);
  var peg$e32 = peg$classExpectation([["0", "9"]], false, false);
  var peg$e33 = peg$literalExpectation(".", false);
  var peg$e34 = peg$classExpectation([">"], true, false);
  var peg$e35 = peg$literalExpectation("//", false);
  var peg$e36 = peg$classExpectation(["\n"], true, false);
  var peg$e37 = peg$classExpectation([" ", "\t"], false, false);
  var peg$e38 = peg$classExpectation(["\n", "\r"], false, false);

  var peg$f0 = function(items) {
    var declarations = [];
    var elements = [];
    for (var i = 0; i < items.length; i++) {
      var item = items[i];
      if (item) {
        if (item.key) {
          declarations.push(item);
        } else if (item.type) {
          elements.push(item);
        }
      }
    }
    return {
      declarations: declarations,
      elements: elements
    };
  };
  var peg$f1 = function(decl) { return decl; };
  var peg$f2 = function(elem) { return elem; };
  var peg$f3 = function(key, value) {
    return { key: key, value: value };
  };
  var peg$f4 = function(key) {
    return { key: key, value: 'true' };
  };
  var peg$f5 = function(e) { return e; };
  var peg$f6 = function(text, rest) {
    return {
      type: 'rectangle',
      text: text,
      attributes: rest ? rest.attributes || {} : {},
      coordinates: rest ? rest.coordinates : null
    };
  };
  var peg$f7 = function(text, rest) {
    return {
      type: 'rounded-rectangle',
      text: text,
      attributes: rest ? rest.attributes || {} : {},
      coordinates: rest ? rest.coordinates : null
    };
  };
  var peg$f8 = function(text, rest) {
    return {
      type: 'circle',
      text: text,
      attributes: rest ? rest.attributes || {} : {},
      coordinates: rest ? rest.coordinates : null
    };
  };
  var peg$f9 = function(text, rest) {
    return {
      type: 'text',
      text: text,
      attributes: rest ? rest.attributes || {} : {},
      coordinates: rest ? rest.coordinates : null
    };
  };
  var peg$f10 = function(text, rest) {
    return {
      type: 'placeholder',
      text: text,
      attributes: rest ? rest.attributes || {} : {},
      coordinates: rest ? rest.coordinates : null
    };
  };
  var peg$f11 = function(url, rest) {
    return {
      type: 'image',
      url: url,
      attributes: rest ? rest.attributes || {} : {},
      coordinates: rest ? rest.coordinates : null
    };
  };
  var peg$f12 = function(label, lineCoords, attrs) {
    var result = {
      type: 'line',
      attributes: attrs || {}
    };
    if (label) result.label = label;
    return Object.assign(result, lineCoords);
  };
  var peg$f13 = function(startX, startY, dx, dy) {
    return {
      start: { x: startX, y: startY },
      end: { type: 'relative', dx: dx, dy: dy }
    };
  };
  var peg$f14 = function(startX, startY, endX, endY) {
    return {
      start: { x: startX, y: startY },
      end: { x: endX, y: endY }
    };
  };
  var peg$f15 = function(rest) {
    return {
      type: 'table',
      attributes: rest ? rest.attributes || {} : {},
      coordinates: rest ? rest.coordinates : null,
      children: []
    };
  };
  var peg$f16 = function(rest) {
    return {
      type: 'table-row',
      attributes: rest ? rest.attributes || {} : {},
      coordinates: rest ? rest.coordinates : null,
      children: []
    };
  };
  var peg$f17 = function(coords, attrs) {
    return { coordinates: coords, attributes: attrs };
  };
  var peg$f18 = function(coords) {
    return { coordinates: coords, attributes: {} };
  };
  var peg$f19 = function(attrs) {
    return { coordinates: null, attributes: attrs };
  };
  var peg$f20 = function(x, y) {
    return { x: x, y: y };
  };
  var peg$f21 = function(n) {
    return { type: 'absolute', value: n };
  };
  var peg$f22 = function(d, n) {
    return { type: 'edge', direction: d, value: n };
  };
  var peg$f23 = function(d, n) {
    return { type: 'edge', direction: d, value: -n };
  };
  var peg$f24 = function(d) {
    return { type: 'edge', direction: d, value: 0 };
  };
  var peg$f25 = function(firstAttr, restAttrs) {
    var result = {};
    result[firstAttr.key] = firstAttr.value;
    for (var i = 0; i < restAttrs.length; i++) {
      var attr = restAttrs[i][1];
      result[attr.key] = attr.value;
    }
    return result;
  };
  var peg$f26 = function(key, value) {
    return { key: key, value: value };
  };
  var peg$f27 = function(key) {
    return { key: key, value: 'true' };
  };
  var peg$f28 = function() {
    return text();
  };
  var peg$f29 = function(content) {
    return content;
  };
  var peg$f30 = function(content) {
    return content;
  };
  var peg$f31 = function(chars) {
    return chars.join('').replace(/\\n/g, '\n').replace(/\\"/g, '"');
  };
  var peg$f32 = function() { return '"'; };
  var peg$f33 = function() { return '\n'; };
  var peg$f34 = function() { return '\\'; };
  var peg$f35 = function() { return '\n'; };
  var peg$f36 = function() { return text(); };
  var peg$f37 = function() {
    return text().trim();
  };
  var peg$f38 = function() {
    return text();
  };
  var peg$f39 = function() {
    return parseFloat(text());
  };
  var peg$f40 = function() {
    return text();
  };
  var peg$currPos = options.peg$currPos | 0;
  var peg$savedPos = peg$currPos;
  var peg$posDetailsCache = [{ line: 1, column: 1 }];
  var peg$maxFailPos = peg$currPos;
  var peg$maxFailExpected = options.peg$maxFailExpected || [];
  var peg$silentFails = options.peg$silentFails | 0;

  var peg$result;

  if (options.startRule) {
    if (!(options.startRule in peg$startRuleFunctions)) {
      throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
    }

    peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
  }

  function text() {
    return input.substring(peg$savedPos, peg$currPos);
  }

  function offset() {
    return peg$savedPos;
  }

  function range() {
    return {
      source: peg$source,
      start: peg$savedPos,
      end: peg$currPos
    };
  }

  function location() {
    return peg$computeLocation(peg$savedPos, peg$currPos);
  }

  function expected(description, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildStructuredError(
      [peg$otherExpectation(description)],
      input.substring(peg$savedPos, peg$currPos),
      location
    );
  }

  function error(message, location) {
    location = location !== undefined
      ? location
      : peg$computeLocation(peg$savedPos, peg$currPos);

    throw peg$buildSimpleError(message, location);
  }

  function peg$literalExpectation(text, ignoreCase) {
    return { type: "literal", text: text, ignoreCase: ignoreCase };
  }

  function peg$classExpectation(parts, inverted, ignoreCase) {
    return { type: "class", parts: parts, inverted: inverted, ignoreCase: ignoreCase };
  }

  function peg$anyExpectation() {
    return { type: "any" };
  }

  function peg$endExpectation() {
    return { type: "end" };
  }

  function peg$otherExpectation(description) {
    return { type: "other", description: description };
  }

  function peg$computePosDetails(pos) {
    var details = peg$posDetailsCache[pos];
    var p;

    if (details) {
      return details;
    } else {
      if (pos >= peg$posDetailsCache.length) {
        p = peg$posDetailsCache.length - 1;
      } else {
        p = pos;
        while (!peg$posDetailsCache[--p]) {}
      }

      details = peg$posDetailsCache[p];
      details = {
        line: details.line,
        column: details.column
      };

      while (p < pos) {
        if (input.charCodeAt(p) === 10) {
          details.line++;
          details.column = 1;
        } else {
          details.column++;
        }

        p++;
      }

      peg$posDetailsCache[pos] = details;

      return details;
    }
  }

  function peg$computeLocation(startPos, endPos, offset) {
    var startPosDetails = peg$computePosDetails(startPos);
    var endPosDetails = peg$computePosDetails(endPos);

    var res = {
      source: peg$source,
      start: {
        offset: startPos,
        line: startPosDetails.line,
        column: startPosDetails.column
      },
      end: {
        offset: endPos,
        line: endPosDetails.line,
        column: endPosDetails.column
      }
    };
    if (offset && peg$source && (typeof peg$source.offset === "function")) {
      res.start = peg$source.offset(res.start);
      res.end = peg$source.offset(res.end);
    }
    return res;
  }

  function peg$fail(expected) {
    if (peg$currPos < peg$maxFailPos) { return; }

    if (peg$currPos > peg$maxFailPos) {
      peg$maxFailPos = peg$currPos;
      peg$maxFailExpected = [];
    }

    peg$maxFailExpected.push(expected);
  }

  function peg$buildSimpleError(message, location) {
    return new peg$SyntaxError(message, null, null, location);
  }

  function peg$buildStructuredError(expected, found, location) {
    return new peg$SyntaxError(
      peg$SyntaxError.buildMessage(expected, found),
      expected,
      found,
      location
    );
  }

  function peg$parseDocument() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parseComment();
    if (s2 === peg$FAILED) {
      s2 = input.charAt(peg$currPos);
      if (peg$r0.test(s2)) {
        peg$currPos++;
      } else {
        s2 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e0); }
      }
    }
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parseComment();
      if (s2 === peg$FAILED) {
        s2 = input.charAt(peg$currPos);
        if (peg$r0.test(s2)) {
          peg$currPos++;
        } else {
          s2 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e0); }
        }
      }
    }
    s2 = [];
    s3 = peg$parseDocumentItem();
    while (s3 !== peg$FAILED) {
      s2.push(s3);
      s3 = peg$parseDocumentItem();
    }
    peg$savedPos = s0;
    s0 = peg$f0(s2);

    return s0;
  }

  function peg$parseDocumentItem() {
    var s0, s1, s2, s3;

    s0 = peg$currPos;
    s1 = peg$parseDocumentDeclaration();
    if (s1 !== peg$FAILED) {
      s2 = [];
      s3 = peg$parseComment();
      if (s3 === peg$FAILED) {
        s3 = input.charAt(peg$currPos);
        if (peg$r0.test(s3)) {
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e0); }
        }
      }
      while (s3 !== peg$FAILED) {
        s2.push(s3);
        s3 = peg$parseComment();
        if (s3 === peg$FAILED) {
          s3 = input.charAt(peg$currPos);
          if (peg$r0.test(s3)) {
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e0); }
          }
        }
      }
      peg$savedPos = s0;
      s0 = peg$f1(s1);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      s1 = peg$parseElement();
      if (s1 !== peg$FAILED) {
        s2 = [];
        s3 = peg$parseComment();
        if (s3 === peg$FAILED) {
          s3 = input.charAt(peg$currPos);
          if (peg$r0.test(s3)) {
            peg$currPos++;
          } else {
            s3 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e0); }
          }
        }
        while (s3 !== peg$FAILED) {
          s2.push(s3);
          s3 = peg$parseComment();
          if (s3 === peg$FAILED) {
            s3 = input.charAt(peg$currPos);
            if (peg$r0.test(s3)) {
              peg$currPos++;
            } else {
              s3 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$e0); }
            }
          }
        }
        peg$savedPos = s0;
        s0 = peg$f2(s1);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$parseComment();
        if (s0 === peg$FAILED) {
          s0 = input.charAt(peg$currPos);
          if (peg$r0.test(s0)) {
            peg$currPos++;
          } else {
            s0 = peg$FAILED;
            if (peg$silentFails === 0) { peg$fail(peg$e0); }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseDocumentDeclaration() {
    var s0, s1, s2, s3, s4, s5, s6, s7;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 33) {
      s1 = peg$c0;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e1); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseIdentifier();
      if (s2 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 61) {
          s3 = peg$c1;
          peg$currPos++;
        } else {
          s3 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$e2); }
        }
        if (s3 !== peg$FAILED) {
          s4 = peg$parseValue();
          if (s4 !== peg$FAILED) {
            s5 = [];
            s6 = peg$parse_();
            while (s6 !== peg$FAILED) {
              s5.push(s6);
              s6 = peg$parse_();
            }
            s6 = peg$parseComment();
            if (s6 === peg$FAILED) {
              s6 = null;
            }
            s7 = peg$parseEOL();
            if (s7 !== peg$FAILED) {
              peg$savedPos = s0;
              s0 = peg$f3(s2, s4);
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }
    if (s0 === peg$FAILED) {
      s0 = peg$currPos;
      if (input.charCodeAt(peg$currPos) === 33) {
        s1 = peg$c0;
        peg$currPos++;
      } else {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e1); }
      }
      if (s1 !== peg$FAILED) {
        s2 = peg$parseIdentifier();
        if (s2 !== peg$FAILED) {
          s3 = [];
          s4 = peg$parse_();
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parse_();
          }
          s4 = peg$parseComment();
          if (s4 === peg$FAILED) {
            s4 = null;
          }
          s5 = peg$parseEOL();
          if (s5 !== peg$FAILED) {
            peg$savedPos = s0;
            s0 = peg$f4(s2);
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    }

    return s0;
  }

  function peg$parseElement() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    s1 = [];
    s2 = peg$parse_();
    while (s2 !== peg$FAILED) {
      s1.push(s2);
      s2 = peg$parse_();
    }
    s2 = peg$parseContainerElement();
    if (s2 === peg$FAILED) {
      s2 = peg$parseSimpleElement();
    }
    if (s2 !== peg$FAILED) {
      s3 = [];
      s4 = peg$parse_();
      while (s4 !== peg$FAILED) {
        s3.push(s4);
        s4 = peg$parse_();
      }
      s4 = peg$parseComment();
      if (s4 === peg$FAILED) {
        s4 = null;
      }
      peg$savedPos = s0;
      s0 = peg$f5(s2);
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseContainerElement() {
    var s0;

    s0 = peg$parseTableElement();
    if (s0 === peg$FAILED) {
      s0 = peg$parseTableRowElement();
    }

    return s0;
  }

  function peg$parseSimpleElement() {
    var s0;

    s0 = peg$parseCircleElement();
    if (s0 === peg$FAILED) {
      s0 = peg$parseRectangleElement();
      if (s0 === peg$FAILED) {
        s0 = peg$parseRoundedRectangleElement();
        if (s0 === peg$FAILED) {
          s0 = peg$parseTextElement();
          if (s0 === peg$FAILED) {
            s0 = peg$parsePlaceholderElement();
            if (s0 === peg$FAILED) {
              s0 = peg$parseImageElement();
              if (s0 === peg$FAILED) {
                s0 = peg$parseLineElement();
              }
            }
          }
        }
      }
    }

    return s0;
  }

  function peg$parseRectangleElement() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 91) {
      s1 = peg$c2;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e3); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseQuotedString();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (input.charCodeAt(peg$currPos) === 93) {
        s3 = peg$c3;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e4); }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parseElementRest();
        if (s4 === peg$FAILED) {
          s4 = null;
        }
        peg$savedPos = s0;
        s0 = peg$f6(s2, s4);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseRoundedRectangleElement() {
    var s0, s1, s2, s3, s4;

    s0 = peg$currPos;
    if (input.charCodeAt(peg$currPos) === 40) {
      s1 = peg$c4;
      peg$currPos++;
    } else {
      s1 = peg$FAILED;
      if (peg$silentFails === 0) { peg$fail(peg$e5); }
    }
    if (s1 !== peg$FAILED) {
      s2 = peg$parseQuotedString();
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (input.charCodeAt(peg$currPos) === 41) {
        s3 = peg$c5;
        peg$currPos++;
      } else {
        s3 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$e6); }
      }
      if (s3 !== peg$FAILED) {
        s4 = peg$parseElementRest();
        if (s4 === peg$FAILED) {
          s4 = null;
        }
        peg$savedPos = s0;
        s0 = peg$f7(s2, s4);
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
    } else {
      peg$currPos = s0;
      s0 = peg$FAILED;
    }

    return s0;
  }

  function peg$parseCircleElement() {
    var s0, s1, s2, s3, s4;
